updated html files

--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -26,7 +26,7 @@
 
 
                 <li class="nav__item">
-                    <a class="nav__links" th:href="@{/sql/lecturers}">Учителям</a>
+                    <a class="nav__links" th:href="@{/sql/lecturers}">Преподавателям</a>
                 </li>
                 <li class="nav__item">
                     <a class="nav__links" th:href="@{/faq}">Вопросы</a>
@@ -127,7 +127,6 @@
     </section>
     <section class="display" th:if="${flag} == true">
         <div class="container display-section", id="display-container">
-            <h2 class="section-header">Документ</h2>
             <div class="container leveling">
                 <table class="columns">
                     <thead>
