--- a/src/main/resources/templates/support.html
+++ b/src/main/resources/templates/support.html
@@ -23,7 +23,7 @@
             </a>
             <nav class="nav flex">
               <ul class="list-reset nav__list flex">
-                <li class="nav__item"><a class="nav__links" th:href="@{/sql/lecturers}">Учителям</a></li>
+                <li class="nav__item"><a class="nav__links" th:href="@{/sql/lecturers}">Преподавателям</a></li>
                 <li class="nav__item"><a class="nav__links" th:href="@{/faq}">Вопросы</a></li>
                 <li class="nav__item"><a class="nav__links" th:href="@{/support}">Поддержка</a></li>
               </ul>
