--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -62,7 +62,7 @@
     </div>
 </header>
 
-<main layout:fragment="body"></main>
+<main layout:fragment="main"></main>
 
 <footer class="footer">
     <div class="container footer__container">
