--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -5,7 +5,7 @@
 
 
 
-<main layout:fragment="body">
+<main layout:fragment="main">
     <section  class="contacts-form">
         <div class="container form-container">
             <h2 class="section-header form-header">Получить документ</h2>
