--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -270,7 +270,7 @@ main {
 
 
 .display-section {
-	display: none;
+	display: block;
 	max-width: 100%;
 }
 
@@ -557,15 +557,63 @@ main {
 
 .nav__links:focus {
 	padding: 5px;
-	outline: 2px solid #0051ff;
+	border-bottom: 2px solid#0051ff;	;
 	transition: border 0.3s ease-in-out;
 }
 
 
 .nav__links:active {
 	padding-bottom: 5px;
-	border-bottom: 2px solid#1c3169;
+	outline: 2px solid #0051ff;
 	transition: border 0.3s ease-in-out;
 	color: #0051ff;
 	transition: color 0.3s ease-in-out;
 }
+
+.send-file{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.input__wrapper{
+	padding-top: 100px;
+	text-align: center;
+}
+
+.input__file{
+		display: none;
+}
+
+.input__file-icon-wrapper {
+	height: 60px;
+	width: 60px;
+	margin-right: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-right: 1px solid #fff;
+  }
+
+
+  .input__file-button {
+	width: 100%;
+	max-width: 290px;
+	height: 60px;
+	background: #4670e4;
+	color: #fff;
+	font-size: 1.125rem;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	border-radius: 3px;
+	cursor: pointer;
+	margin: 0 auto;
+  }
+
+  .input__file-icon{
+	fill: #fff;
+	stroke: #fff;
+  }
