--- a/src/main/resources/templates/functions.html
+++ b/src/main/resources/templates/functions.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="input__wrapper">
                 <form id="uploadForm" enctype="multipart/form-data">
-                    <input onchange="this.form.submit()" name="file" type="file" id="input__file" class="input input__file", accept="application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document">
+                    <input onchange="this.form.submit()" name="file" type="file" id="input__file" class="input input__file" accept="application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document">
                     <label for="input__file" class="input__file-button">
                             <span class="input__file-icon-wrapper">
                                 <img class="input__file-icon" src="img/upload.svg" alt="Выбрать файл" width="25">
