--- a/src/main/resources/templates/functions.html
+++ b/src/main/resources/templates/functions.html
@@ -18,35 +18,14 @@
                             </span>
                         <span class="input__file-button-text">Выберите файл</span>
                     </label>
+                    <div class="download">
+                    <a class="download-button" type="button" th:href="@{/api/v1/download_protocols}">Скачать протокол</a>
+                    </div>
                 </form>
                 <div id="uploadStatus"></div>
             </div>
-            <a type="button" th:href="@{/api/v1/download_protocols}">Get Proton</a>
         </div>
     </main>
-    <script>
-        $(document).ready(function() {
-            $('#input__file').on('change', function() {
-                var formData = new FormData();
-                var file = this.files[0];
-                formData.append('file', file);
-
-                $.ajax({
-                    type: 'POST',
-                    url: '/api/v1/deserialization-data',
-                    data: formData,
-                    contentType: false,
-                    processData: false,
-                    success: function(response) {
-                        $('#uploadStatus').html('<p>' + response + '</p>');
-                    },
-                    error: function(response) {
-                        $('#uploadStatus').html('<p>File upload failed.</p>');
-                    }
-                });
-            });
-        });
-    </script>
 </body>
 
 </html>
