--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 html {
 	box-sizing: border-box;
-	background-color: #FFFFFF;
+	background-image: linear-gradient(to right top, #f9fcff, #d8e6f7, #bad5f7, #89b7f3, #4b9ce7);
 }
 
 
@@ -43,7 +43,7 @@ table thead th {
 	display: flex;
 	width: 100%;
 	outline: 0.5px solid black;
-	;
+;
 	flex-direction: row;
 }
 
@@ -106,7 +106,7 @@ body {
 	align-items: center;
 	padding-top: 25px;
 	padding-bottom: 25px;
-	border-radius: 32px;
+	border-radius: 0 0 32px 32px;
 	background-color: rgb(251, 252, 255);
 	box-shadow: 21px 67px 119px 0px rgba(70, 156, 235, 0.75);
 	-webkit-box-shadow: 21px 67px 119px 0px rgba(70, 156, 235, 0.75);
@@ -192,7 +192,7 @@ main {
 
 .selection{
 	max-width: 190px;
-  }
+}
 
 .selection-param {
 	line-height: 21px;
@@ -203,10 +203,10 @@ main {
 
 .selector-patch {
 	display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    max-width: 141px!important;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: left;
+	max-width: 141px!important;
 
 	position: relative
 }
@@ -216,7 +216,7 @@ main {
 }
 
 .select2-container {
-    max-width: 100% !important;
+	max-width: 100% !important;
 }
 
 .selector-patch-2 {
@@ -405,7 +405,7 @@ main {
 
 ::placeholder { /* Most modern browsers support this now. */
 	color:    rgb(221, 221, 221);
- }
+}
 
 
 .form__header {
@@ -416,9 +416,9 @@ main {
 	line-height: 59px;
 	color: #ffffff;
 	text-shadow: 1px 1px 7px rgba(70, 156, 235, 0.75),
-		1px 1px 10px rgba(70, 156, 235, 0.75),
-		1px 1px 15px rgba(70, 156, 235, 0.75),
-		1px 1px 21px rgba(70, 156, 235, 0.75);
+	1px 1px 10px rgba(70, 156, 235, 0.75),
+	1px 1px 15px rgba(70, 156, 235, 0.75),
+	1px 1px 21px rgba(70, 156, 235, 0.75);
 }
 
 .form-body-support {
@@ -586,7 +586,7 @@ main {
 }
 
 .input__file{
-		display: none;
+	display: none;
 }
 
 .input__file-icon-wrapper {
@@ -597,10 +597,10 @@ main {
 	align-items: center;
 	justify-content: center;
 	border-right: 1px solid #fff;
-  }
+}
 
 
-  .input__file-button {
+.input__file-button {
 	width: 100%;
 	min-width: 260px;
 	height: 60px;
@@ -614,14 +614,14 @@ main {
 	border-radius: 3px;
 	cursor: pointer;
 	margin-bottom: 30px;
-  }
+}
 
-  .input__file-icon{
+.input__file-icon{
 	fill: #fff;
 	stroke: #fff;
-  }
+}
 
-  .download{
+.download{
 	display: flex;
 	background-image: url(../img/download.svg);
 	background-repeat: no-repeat;
@@ -632,12 +632,149 @@ main {
 	background-color: #4670e4;
 	padding: 10px 30px;
 	justify-content: flex-end;
-  }
+}
 
-  .download-button{
+.download-button{
 	line-height: 32px;
 	font-weight: 700;
 	font-size: 1.125rem;
 	text-decoration: none;
 	color: #FFFFFF;
+}
+
+
+
+
+
+
+.form-label{
+	font-size: 18px;
+}
+
+.form-input{
+	width: 100%;
+	font-size: 18px;
+	margin-right: 15px;
+	margin-bottom: 15px;
+	vertical-align: baseline;
+	font-weight: 400;
+	line-height: 1.29;
+	letter-spacing: .16px;
+	border-radius: 0;
+	outline: 2px solid transparent;
+	outline-offset: -2px;
+	height: 40px;
+	border: none;
+	border-bottom: 1px solid #8d8d8d;
+	background-color: rgb(245, 245, 245);
+	padding: 0 16px;
+	color: #161616;
+	transition: background-color 70ms cubic-bezier(.2,0,.38,.9),outline 70ms cubic-bezier(.2,0,.38,.9);
+}
+
+.form-input:focus{
+	background-color: rgb(235,235, 235);
+}
+
+
+.form-input-space{
+	display: flex;
+	align-items: baseline
+}
+
+.student-form-button{
+	font-size: 18px;
+	background-color: #fff;
+	padding: 2px 10px;
+	color: #006eff;
+	border: 3px solid #006eff;
+	border-radius: 5px;
+
+}
+
+.student-form-button-send{
+	font-size: 20px;
+	color: #FFFFFF;
+	padding: 5px 25px;
+	min-width: 120px;
+	background-color: #006eff;
+	border: 3px solid #006eff;
+	border-radius: 12px;
+	min-height: 50px;
+	min-width: 170px;
+}
+
+.generate-container{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 50px;
+}
+
+.doc-form{
+	min-width: 480px;
+	padding: 60px 50px;
+	border: 5px solid #006eff;
+	border-radius: 25px;
+	background-color: #f5f5f5;
+	box-shadow: 21px 19px 28px -4px rgba(34, 60, 80, 0.37);
+}
+
+.form__button__wrapper{
+	display: flex;
+	justify-content: space-around;
+}
+
+.student-add-form {
+	display: flex;
+	flex-direction: column;
+}
+
+.student-input{
+	display: flex;
+	flex-direction: column;
+	font-size: 0;
+	margin-bottom: 20px;
+}
+
+
+
+.section-buttons{
+	margin-bottom: 50px;
+	box-shadow: 1px 0px 16px 8px rgba(0, 101, 178, 0.36);
+}
+
+.section-buttons-list{
+	display: flex;
+}
+
+.section-button{
+	background-color: #4670e4;
+	min-width: 125px;
+	min-height: 50px;
+	color: #FFFFFF;
+	padding: 10px 20px;
+	border: 0;
+	transition: 0.3s background-color ease-in-out;
+}
+
+.section-button:hover{
+
+	background-color: rgb(13, 79, 165);
+}
+
+
+/*
+  .section-button:first-child{
+	border-radius: 20px 0 0 20px;
   }
+*/
+.section-button:not(:last-child){
+	border-right: 1px solid #0452b8;
+	margin: 0;
+}
+
+.button-wrapper{
+	display: flex;
+	justify-content: center
+}
