--- a/src/main/resources/templates/uploadDataForm.html
+++ b/src/main/resources/templates/uploadDataForm.html
@@ -37,38 +37,38 @@
                         </div></div><div class="student-input">
                     <label class="form-label">Гражданство студента</label>
                     <div class="form-input-space">
-                        <input class="form-input" name="citizenship" type="text" id="2-field">
+                        <input class="form-input" name="citizenship" type="text" id="2-field" required>
                     </div>
                 </div>
                     <div class="student-input">
                         <label class="form-label">Уровень образования</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="loe" type="text" id="3-field">
+                            <input class="form-input" name="loe" type="text" id="3-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Классификатор</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="classifier" type="text" id="4-field">
+                            <input class="form-input" name="classifier" type="text" id="4-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Код</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="orientationCode" pattern="\d{2}.\d{2}.\d{2}" type="text" id="5-field">
+                            <input class="form-input" name="orientationCode" pattern="\d{2}.\d{2}.\d{2}" type="text" id="5-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Наименование</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="orientationName" type="text" pattern="" id="6-field">
+                            <input class="form-input" name="orientationName" type="text"  id="6-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Дата</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="dateOfProtection" data-date="" value="new Date()" type="date" data-date-format="DD MM YYYY" id="7-field">
+                            <input class="form-input" name="dateOfProtection" data-date="" value="new Date()" type="date" data-date-format="DD MM YYYY" id="7-field" required>
                         </div>
                     </div>
                 </div>
@@ -77,38 +77,38 @@
                     <div class="student-input">
                         <label class="form-label">ФИО преподавателя</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="lecturersName" type="text" id="8-field">
+                            <input class="form-input" name="lecturersName" type="text" id="8-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Ученая степень</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="academicPosition" type="text" id="9-field">
+                            <input class="form-input" name="academicPosition" type="text" id="9-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Должность</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="position" type="text" id="10-field">
+                            <input class="form-input" name="position" type="text" id="10-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Наименование кафедры</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="departmentName" type="text" id="11-field">
+                            <input class="form-input" name="departmentName" type="text" id="11-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Является ли научным руководителем</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="isScientificSupervisor" type="checkbox" id="12-field">
+                            <input class="form-input" name="isScientificSupervisor" type="checkbox" id="12-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Является ли Консультантом</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="isConsultant" type="checkbox" id="13-field">
+                            <input class="form-input" name="isConsultant" type="checkbox" id="13-field" required>
                         </div>
                     </div>
                 </div>
@@ -116,26 +116,26 @@
                     <div class="student-input">
                         <label class="form-label">Наименование темы</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="themeName" type="text" id="14-field">
+                            <input class="form-input" name="themeName" type="text" id="14-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Оригинальность</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="uniqueness" type="text" id="15-field">
+                            <input class="form-input" name="uniqueness" type="text" id="15-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Отзыв</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="feedback" type="text" id="16-field">
+                            <input class="form-input" name="feedback" type="text" id="16-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Объем работы</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="volume" type="text" id="17-field">
+                            <input class="form-input" name="volume" type="text" id="17-field" required>
                         </div>
                     </div>
                 </div>
@@ -144,26 +144,26 @@
                     <div class="student-input">
                         <label class="form-label">Руководитель ВКР</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="headOfTheFQW" type="text" id="18-field">
+                            <input class="form-input" name="headOfTheFQW" type="text" id="18-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Рецензия</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="review" type="text" id="19-field">
+                            <input class="form-input" name="review" type="text" id="19-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Оценка</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="grade" type="text" id="20-field">
+                            <input class="form-input" name="grade" type="text" id="20-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Объем</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="volume" type="text" id="21-field">
+                            <input class="form-input" name="volume" type="text" id="21-field" required>
                         </div>
                     </div>
                 </div>
@@ -172,20 +172,20 @@
                     <div class="student-input">
                         <label class="form-label">ФИО</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="reviewerName" type="text" id="22-field">
+                            <input class="form-input" name="reviewerName" type="text" id="22-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Ученая степень</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="reviewerAD" type="text" id="23-field">
+                            <input class="form-input" name="reviewerAD" type="text" id="23-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Должность</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="reviewerPos" type="text" id="24-field">
+                            <input class="form-input" name="reviewerPos" type="text" id="24-field" required>
                         </div>
                     </div>
                 </div>
@@ -195,71 +195,71 @@
                     <div class="student-input">
                         <label class="form-label">ФИО</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerName1" type="text" id="25-field">
+                            <input class="form-input" name="commissionerName1" type="text" id="25-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Университет</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerUniv1" type="text" id="26-field">
+                            <input class="form-input" name="commissionerUniv1" type="text" id="26-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Кафедра</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerDep1" type="text" id="27-field">
+                            <input class="form-input" name="commissionerDep1" type="text" id="27-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Вопрос</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="question1" type="text" id="28-field">
+                            <input class="form-input" name="question1" type="text" id="28-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">ФИО</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerName2" type="text" id="29-field">
+                            <input class="form-input" name="commissionerName2" type="text" id="29-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Университет</label>
-                        <div class="form-input-space"><input class="form-input" name="commissionerUniv2" type="text" id="30-field">
+                        <div class="form-input-space"><input class="form-input" name="commissionerUniv2" type="text" id="30-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Кафедра</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerDep2" type="text" id="31-field">
+                            <input class="form-input" name="commissionerDep2" type="text" id="31-field" required>
                         </div></div><div class="student-input">
                     <label class="form-label">Вопрос</label>
                     <div class="form-input-space">
-                        <input class="form-input" name="question2" type="text" id="32-field">
+                        <input class="form-input" name="question2" type="text" id="32-field" required>
                     </div>
                 </div>
                     <div class="student-input">
                         <label class="form-label">ФИО</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerName3" type="text" id="33-field">
+                            <input class="form-input" name="commissionerName3" type="text" id="33-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Университет</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerUniv3" type="text" id="34-field">
+                            <input class="form-input" name="commissionerUniv3" type="text" id="34-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Кафедра</label>
                         <div class="form-input-space">
-                            <input class="form-input" name="commissionerDep3" type="text" id="35-field">
+                            <input class="form-input" name="commissionerDep3" type="text" id="35-field" required>
                         </div>
                     </div>
                     <div class="student-input">
                         <label class="form-label">Вопрос</label>
                         <br>
                         <div class="form-input-space">
-                            <input class="form-input" name="question3" type="text" id="36-field">
+                            <input class="form-input" name="question3" type="text" id="36-field" required>
                         </div>
                     </div>
                 </div>
