--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+<html lang="en"
+      xmlns:th='http://thymeleaf.org'
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}"
+>
+    <body layout:fragment="body">
+        <main layout:fragment="main"></main>
+        <footer layout:fragment="footer"></footer>
+    </body>
 </html>
