--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -14,7 +14,7 @@
 
                         <div class="selector-patch">
                             <label class="selection-param">Направление
-                                <select name="orientation" class="slider-val">
+                                <select name="orientation" class="slider-val" onChange="saveInputs(name, value)" id="orientation">
                                     <option th:value="-1">
                                         Выберите Направление
                                     </option>
@@ -28,7 +28,7 @@
 
                         <div class="selector-patch">
                             <label class="selection-param">Кафедра
-                                <select name="department" class="slider-val">
+                                <select name="department" class="slider-val"  onChange="saveInputs(name, value)" id="department">
                                     <option th:value="-1">
                                         Выберите кафедру
                                     </option>
@@ -47,7 +47,7 @@
                         </div>
                         <div class="selector-patch-2">
                             <label class="selection-param">Тема
-                                <select class="slider-val" name="themes" th:attr="data-placeholder='Select or type to search'">
+                                <select class="slider-val" name="themes" th:attr="data-placeholder='Select or type to search'" onChange="saveInputs(name, value)" id="themes">
                                     <option th:value="-1">Выберите тему: </option>
                                     <option th:each="theme : ${themes_selector}"
                                             th:text="${theme.name}"
@@ -59,7 +59,7 @@
 
                         <div class="selector-patch-2 margin-fix">
                             <label class="selection-param">Науч рук
-                                <select name="lecturer" class="slider-val">
+                                <select name="lecturer" class="slider-val" onChange="saveInputs(name, value)" id="lecturer">
                                     <option th:value="-1">
                                         Выберите преподавателя
                                     </option>
@@ -76,8 +76,9 @@
             </div>
         </section>
         <section  class="display" th:if="${flag} == true">
-            <div class="container display-section", id="display-container">
-                <div class="container leveling">
+            
+            <div class="container-fluid display-section", id="display-container">
+                <div class="container-fluid leveling">
                     <table class="columns">
                         <thead>
                             <tr class="tr-table">
@@ -91,19 +92,22 @@
                                 <th class="td-table">Тема</th>
                             </tr>
                         </thead>
+                        <tbody>
+                            <tr class="tr-table" th:each="stlec : ${studentLecturers_container}" th:if="${not #lists.isEmpty(stlec) &amp;&amp; (stlec.lecturer.id == specificLecturer.id || specificLecturer.id == null)}">
+                                <td class="td-table lecturer_name" th:text="${stlec.lecturer.name}"></td>
+                                <td class="td-table academic_degree" th:text="${stlec.lecturer.academicDegree}"></td>
+                                <td class="td-table lecturer_position" th:text="${stlec.lecturer.position}"></td>
+                                <td class="td-table department_name" th:text="${stlec.lecturer.department.name}"></td>
+                                <td class="td-table student_name" th:text="${stlec.student.name}"></td>
+                                <td class="td-table stud_num" th:text="${stlec.student.stud_num}"></td>
+                                <td class="td-table student_citizenship" th:text="${stlec.student.citizenship}"></td>
+                                <td class="td-table fqw_name" th:text="${stlec.student.fqw.name}"></td>
+                            </tr>
+                        </tbody>
                     </table>
-                    <table>
-                        <tr class="tr-table" th:each="stlec : ${studentLecturers_container}" th:if="${not #lists.isEmpty(stlec) &amp;&amp; (stlec.lecturer.id == specificLecturer.id || specificLecturer.id == null)}">
-                            <td class="td-table" th:text="${stlec.lecturer.name}"></td>
-                            <td class="td-table" th:text="${stlec.lecturer.academicDegree}"></td>
-                            <td class="td-table" th:text="${stlec.lecturer.position}"></td>
-                            <td class="td-table" th:text="${stlec.lecturer.department.name}"></td>
-                            <td class="td-table" th:text="${stlec.student.name}"></td>
-                            <td class="td-table" th:text="${stlec.student.stud_num}"></td>
-                            <td class="td-table" th:text="${stlec.student.citizenship}"></td>
-                            <td class="td-table" th:text="${stlec.student.fqw.name}"></td>
-                        </tr>
-                    </table>
+                </div>
+                <div class="download">
+                    <a class="download-button table-download-btn" type="button">Скачать таблицу</a>
                 </div>
             </div>
         </section>
