--- a/src/main/resources/templates/lecturers.html
+++ b/src/main/resources/templates/lecturers.html
@@ -3,6 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 
+<head>
+    <title>Document</title>
+    <script defer src="/js/download_table.js"></script>
+</head>
 
 <body layout:fragment="body">
     <main layout:fragment="main">
