--- a/hub/src/main/resources/templates/index.html
+++ b/hub/src/main/resources/templates/index.html
@@ -9,10 +9,10 @@
 <body>
 <div class="container">
     <h1>Welcome to Your Home Page</h1>
-    <div  th:each="list : ${addNameLater} " th:if="${not #lists.isEmpty(list)}">
-        <span th:text="${list[0]}"></span>
-        <a th:action="@{${list[1]} }"></a>
-        <img th:src="@{${list[2]} }">
+    <div  th:each="website : ${websiteList} " th:if="${not #lists.isEmpty(websiteList)}">
+        <span th:text="${website.name}"></span>
+        <a th:action="@{${website.url}}"></a>
+        <img th:src="@{${website.imgPath}}">
     </div>
 <!--    <a th:href="@{/faq}" class="btn">Go to FAQ</a>-->
 <!--    <a th:href="@{/support}" class="btn">Go to Support</a>-->
